css/style.css
/* ... */
svg > foreignObject {
    display:none;
    opacity: 0;
    pointer-events: none;
}
svg > rect {
    fill: var(--dark-color);
    opacity: 0;
    transition: opacity 300ms;
    pointer-events: none;
}
svg > rect:target {
    opacity: 0.66;
    pointer-events: auto;
}
svg > rect:target + foreignObject {
    display: block;
    opacity: 1;
    pointer-events: auto;
    position: relative;
}
/*svg > rect:target + foreignObject .popup {
    opacity: 1;
}*/
svg > rect:target + foreignObject ~ a {
    pointer-events: none;
}
svg > rect:not(:target) ~ a:hover polygon {
    fill:var(--dark-color);
    fill-opacity: .35;
    stroke-opacity: 1;
}
svg > rect:target + foreignObject + a polygon {
    fill-opacity: 0!important;
    stroke-opacity: 1;
}
svg > #BiltmoreFairwayLodge + foreignObject {
    x:120;
    y:290;
}
svg > #TwoBiltmoreEstates + foreignObject {
    x:920;
    y:400;
}
svg > #BiltmoreSquare + foreignObject {
    x:290;
    y:160;
}
svg > #BiltmoreCourts + foreignObject {
    x:460;
    y:190;
}
svg > #\32 211 + foreignObject {
   x:230;
   y:540;
}
svg > #EsplanadePlace + foreignObject {
    x:450;
    y:630;
}
svg > #Optima + foreignObject {
    x:270;
    y:630;
}
svg > #VillageOnTheLakes + foreignObject {
    x:470;
    y:540;
}
svg > #BiltmoreGates + foreignObject {
    x:190;
    y:70;
}
svg > #BiltmoreGreens + foreignObject {
    x:420;
    y:130;
}
svg > #Meridian + foreignObject {
    x:490;
    y:630;
}
svg > #BiltmoreTerrace + foreignObject {
    x:380;
    y:700;
}
svg > #BiltmoreCircleEstates + foreignObject {
    x:380;
    y:170;
}
svg > #Taliverde + foreignObject {
    x:280;
    y:450;
}
svg > #ColonyBiltmoreGreens + foreignObject {
    x:340;
    y:510;
}
svg > #BiltmoreCourtsIi + foreignObject {
    x:450;
    y:180;
}
svg > #HeightsOfTheBiltmore + foreignObject {
    x:110;
    y:370;
}
svg > #BiltmoreHillsideVillas + foreignObject {
    x:360;
    y:0;
}
svg > #TheCloisters + foreignObject {
    x:30;
    y:290;
}
svg > #BiltmoreShores + foreignObject {
    x:370;
    y:480;
}
svg > #BiltmoreMountainEstates + foreignObject {
    x:630;
    y:200;
}
svg > #LincolnHills + foreignObject {
    x:1010;
    y:170;
}
svg > #AltaVistaPark + foreignObject {
    x:590;
    y:180;
}
svg > #BiltmoreHotelVillas + foreignObject {
    x:640px;
    y:190px;
}
@media (max-width:1024.98px){
    .aside-panel {
        display: none;
    }
    .form-group {
        margin-bottom:.5rem;
    }
    main {
        height: 100vh;
        overflow: auto;
        /*height: 1005px;*/
        /*width: 1300px;*/
    }
    .popup {
        /*max-width: 90vw;*/
        height: auto;
        /*min-height: 320px;*/
        position: fixed;
        top:20vh;
        /*width: 100%;*/
        width: 90vw;
    }
    .popup .btn {
        padding:1rem;
    }
    .popup.arrow:before, .popup.hide-arrow:before,
    .popup .comm-info:empty,
    .popup .comm-info:not(:empty) ~ div,
    .popup .comm-info .community-links {
        display: none!important;
    }
    .popup .comm-info {
        overflow: auto;
        height: 100vh;
    }
    .popup .comm-info > .container {
        padding: 15px;
    }
    .popup .caption {
        display: block;
        text-align: center;
    }
    .popup .caption .caption-title {
        font-size: 1rem;
    }
    .popup .caption .caption-text, .popup .caption .buttons,
    #searchCommunitiesFilter {
        display: block;
    }
    .popup .comm-info .community-details > div {
        border-bottom: 1px solid var(--light-gray-color);
        flex:0 0 50%;
        max-width:50%;
        padding:.5rem 0;
    }
    .popup .comm-info .community-details > div:nth-child(odd) {
        color: var(--dark-gray-color);
        flex:0 0 50%;
        font-weight: 700;
        max-width:50%;
        padding-right:.5rem;
    }
    svg {
        position:absolute;
        left:0;
        top:0;
    }
    svg #FairwayLodge + foreignObject {
        x:400;
        y:250;
    }
    svg #BiltmoreSquare + foreignObject {
        y:100;
    }
    svg #Camelback + foreignObject {
        x:370;
        y:460;
    }
    svg > #\32 211 + foreignObject {
       x:320;
       y:430;
   }
    svg > #Optima + foreignObject {
        x:370;
        y:520;
    }
    svg > #EsplanadePlace + foreignObject {
        x:530;
        y:510;
    }
    svg > #VillageOnTheLakes + foreignObject {
        x:650;
        y:480;
    }
    svg > #BiltmoreGreens + foreignObject {
        x:600;
        y:40;
    }
    svg > #AltaVistaPark + foreignObject {
        x:770;
        y:230;
    }
    svg > BiltmoreHillsideVillas + foreignObject {
        x:550;
        y:40;
    }
    svg > #LincolnHills + foreignObject {
        x:1160;
        y:170;
    }
    svg > #Taliverde + foreignObject {
        x:290;
        y:490;
    }
    svg > #BiltmoreGates + foreignObject {
        x:350;
        y:0;
    }
    /*svg > rect:target + foreignObject {*/
    /*  x:0;*/
    /*  y:0;*/
    /*}*/
    /*svg > rect:target + foreignObject .popup {*/
    /*  top: 20px;*/
    /*  bottom: 20px;*/
    /*  left: 20px;*/
    /*  right: 20px;*/
    /*position: fixed;*/
    /*top: 50%;*/
    /*left: 50%;*/
    /*transform: translate(-50%,-50%)!important;*/
    /*}*/
    /*.popup.arrow:before {*/
    /*  display:none;*/
    /*}*/
}
@media (min-width: 1025px) and (max-width: 1440px) {
    :root {
        --aside-panel-width: 36vw;
    }
    .aside-panel .page-section .community-links li {
        font-size:.75rem;
    }
}
/* Slideshow */
.slideshow-container {
    /*max-width: 100%;*/
    position: relative;
    margin: auto;
    width: 100%;
}

/* Hide the images by default */
.slideshow-container .mySlides {
    display: none;
}
/* ... */

